Fixed Spacing Error
Removed CSS that was unintentionally vertically centering content
Footer now automatically extends to bottom of window on smaller pages
Hid horizonal overflow

Created style.css for global CSS
   Moved global CSS code from index.css to style.css

--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,9 @@
+body {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 50px auto 150px;
+}
+
 h1 {
     width: 100%;
 }
