--- a/footer.css
+++ b/footer.css
@@ -1,16 +1,18 @@
+/* #footer {
+    margin-top: 153px;
+} */
+
 .footer-distributed {
     background-color: var(--color-primary-4);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
+    height: 150px;
     width: 100%;
     text-align: left;
     font: normal 16px sans-serif;
-    position: absolute;
+    /* position: fixed; */
     padding: 45px 50px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    margin-bottom: 0px;
+    margin: 0;
 }
 
 .footer-distributed .footer-left p {
